# Sinapse

./: .gitignore  README.md
sinapse_api/: Cargo.toml
sinapse_api/src/: main.rs
sinapse_api/src/models/: deck.rs  flashcard.rs  mod.rs
sinapse_api/src/routes/: auth.rs  decks.rs  flashcards.rs  index.rs  mod.rs  users.rs
sinapse_api/src/utils/: db.rs
sinapse_bot/: main.py
sinapse_bot/cogs/: decks.py  help.py  ping.py  play.py  test.py  trivia.py
sinapse_bot/cogs/classes/: flashcard.py  player.py
sinapse_bot/cogs/controllers/: multiplayer_trivia_controller.py  singleplayer_trivia_controller.py  trivia_controller.py
sinapse_bot/cogs/services/: deck_service.py
sinapse_bot/cogs/utils/: pagination.py
sinapse_bot/models/: deck.py  discord_bot.py  flashcard.py  player.py  trivia.py
sinapse_frontend/: index.html  package-lock.json  package.json  vite.config.mts.timestamp-1733108150394-ed0396f18d2a4.mjs
sinapse_frontend/src/: App.tsx  Router.tsx  index.tsx  utils.ts
sinapse_frontend/src/assets/misc/: AddIcon.tsx  PlayIcon.tsx
sinapse_frontend/src/components/: AuthGuard.tsx  Card.tsx  CardModal.tsx  CreateDeckModal.tsx  CreateFlashcardModal.tsx  FloatingButton.tsx  Header.tsx  ModalBase.tsx
sinapse_frontend/src/models/: deck.ts  flashcard.ts  props.ts
sinapse_frontend/src/pages/: About.tsx  AboutUs.tsx  CardsHome.tsx  Deck.tsx  Decks.tsx  Flashcards.tsx  Home.tsx  Login.tsx  Play.tsx  Register.tsx
sinapse_frontend/src/services/: AuthService.ts  DeckService.ts  FlashcardService.ts  UserService.ts
