[package]
name = "sinapse_api"
authors = ["diogobonofre@gmail.com", "viniciusams17@gmail.com"]
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }  # For async support in tests

[dev-dependencies]
actix-rt = "2" # For testing with Actix runtime
