[package]
name = "sinapse_api"
authors = ["diogobonofre@gmail.com", "viniciusams17@gmail.com"]
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }  # For async support in tests
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
mongodb = "3.1.0"
bson = "2.13.0"
futures-util = "0.3.31"

[dev-dependencies]
actix-rt = "2" # For testing with Actix runtime
